--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,120 +1,78 @@
-/* Navbar Styles */
-.navbar {
-  background: #fff;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 1rem;
-  box-shadow: 0 10px 100px -5px #eee;
-  position: fixed;
-  width: 100%;
-  z-index: 100;
+.header {
+    position: fixed;
+    box-shadow: 0 10px 100px -5px #eee;
+    background-color: #fff;
+    width: 100%;
+    z-index: 10;
 }
-  
-.navbar-container {
-  display: flex;
-  justify-content: space-between;
-  height: 80px;
-  z-index: 1;
-  width: 100%;
-  max-width: 1280px;
-  padding: 0 20px;
-}
-  
-.navbar-logo {
-  color: #000;
-  justify-self: start;
-  cursor: pointer;
-  text-decoration: none;
-  font-size: 1.5rem;
-  display: flex;
-  align-items: center;
-}
-  
-.menu-icon {
-  display: none;
-}
-  
-.nav-menu {
-  display: flex;
-  align-items: center;
-  list-style: none;
-  text-align: center;
-}
-  
-.nav-item {
-  /* height: 50px; */
-  display: flex;
-  align-items: center;
-}
-  
-.nav-links {
-  color: #000;
-  text-decoration: none;
-  padding: 0.5rem 1rem;
-  /* height: 100%; */
-  display: flex;
-  align-items: center;
-}
-  
-.nav-links:hover {
-  background-color: #575757;
-  border-radius: 4px;
-  transition: all 0.2s ease-out;
-}
-  
-/* Responsive Styles */
-@media screen and (max-width: 960px) {
-  .NavbarItems {
-    position: relative;
-  }
-  
-  .menu-icon {
-    display: block;
-    position: absolute;
-    top: 0;
-    right: 0;
-    transform: translate(-100%, 60%);
-    font-size: 1.8rem;
-    cursor: pointer;
-  }
-  
-  .nav-menu {
+
+.header-wrapper {
+    max-width: 1280px;
+    margin: 0 auto;
+    padding: 20px;
     display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: 90vh;
-    position: absolute;
-    top: 80px;
-    left: -100%;
-    opacity: 1;
-    transition: all 0.5s ease;
-    background: #ccc;
-  }
-  
-  .nav-menu.active {
-    background: rgba(145, 145, 145, .95);
-    left: 0;
-    opacity: 1;
-    transition: all 0.5s ease;
-    z-index: 1;
-  }
-  
-  .nav-item {
-    width: 100%;
-  }
-  
-  .nav-links {
-    text-align: center;
-    padding: 2rem;
-    width: 100%;
-    display: table;
-    color: #fff;
-  }
-  
-  .nav-links:hover {
-    background-color: #575757;
-    border-radius: 0;
-  }
+    justify-content: space-between;
+    align-items: center;
 }
-  
+
+.header-nav {
+    display: flex;
+    gap: 30px;
+    font-size: 1.2rem;
+    cursor: pointer;
+}
+
+.header-nav-item {
+    padding: 4px 8px;
+    border-radius: 4px;
+}
+
+.header-nav-item:hover {
+    background-color: #ccc;
+}
+
+.header-toggle {
+    display: none;
+}
+
+@media screen and (max-width: 768px) {
+    .header-toggle {
+        display: block;
+        position: absolute;
+        top: 20px;
+        right: 20px;
+        font-size: 1.5rem;
+        z-index: 20;
+    }
+
+    .header-nav {
+        position: absolute;
+        width: 100%;
+        height: 100vh;
+        top: 0;
+        right: -100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+        z-index: 15;
+        background: rgba(145, 145, 145, .95);
+        transition: all 0.5s ease;
+        font-size: 1.5rem;
+    }
+    
+    .header-nav.header-nav-active {
+        background: rgba(145, 145, 145, .95);
+        right: 0;
+        transition: all 0.5s ease;
+    }
+
+    .header-nav-item {
+        text-align: center;
+        width: 100%;
+    }
+    
+    .header-nav-item a {
+        color: #fff;
+    }
+}
